*Version 2.7.8*
* NoSQL Database env.property to change file access type for improved performance on various systems.
* Fixed bug in multi-threaded startup that would fail to initialze some data sources if the number of threads used was greater than the number of running data sources.
* Added JSON Data for custom data storage

*Version 2.7.6*
* Adding db.nosql env properties to allow setting the location of the NoSQL data store
* Fixed bug where HTML5 pages didn't save URL parameters on a User's home URL
* Fixed bug where OSX could have problems with XHR requests from the UI
* Added tooltips to all icons on HTML5 page toolbar
* Adding Angular support for new Mango Angular Directives
* Startup script change to create logs directory on first run to capture script output
* Fixed charting for Safari and iOS via AmCharts

*Version 2.7.4*
* Adding multi-threading to data source initialization
* Change to allow i-frame embedding of Mango hosted pages on Mango Hosted pages
* Change to ensure NONE level events do not make it into the User's Live events list
* Added latest poll times and durations to data sources edit page under the 'Runtime status' area
* Added env property runtime.datasources.logStartupMetrics to allow output of startup times for data source groups
* Added device name to event messages for data points
* Added env property runtime.realTimeTimer.defaultTaskQueueSize to allow optionally queuing up tasks of the same type
* Added env property runtime.realTimeTimer.flushTaskQueueOnReject to optionally flush the stale tasks from the queue
* Raising events for High priority thread pool's rejected tasks
* Fixed bug where copying a running data source would result in the points not actually being running
* Fixed bug where the PlainRenderer would fail to render some units
* Improved performance of the UserEventCache that caches events for the logged in Users
* Improved performance of the EventManager's active events list