@@ -300,13 +300,9 @@
 			<version>2.3</version>
 		</dependency>
 		<dependency>
-
-
-
-
 			<groupId>org.jfree</groupId>
 			<artifactId>jfreechart</artifactId>
-			<version>1.0.14</version>
+			<version>1.0.19</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
